unpackaged/main/default/objects/Matched_Lender_Opportunity__c/Matched_Lender_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Previously “Matched Lender” but was updated to “Matched Lender Opportunity” to be more accurate with it’s purpose. Records in this object represent an opportunity to fund with a partner lender. It contains all application level fields specifically for the underwriting of a customer with a single lender</description>
    <label>Matched Lender Opportunity</label>
    <nameField>
        <displayFormat>MatchOppty-{000000}</displayFormat>
        <label>Matched Lender Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matched Lender Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>