unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/API_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Status__c</fullName>
    <description>Status to track this match's submission to the defined lender</description>
    <label>API Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Sent Automatically</fullName>
            </value>
            <value>
                <fullName>Sent via CTA</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>