unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>date credit application was approved</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>