unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Business_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Start_Date__c</fullName>
    <description>date business was started</description>
    <label>Business Start Date</label>
    <type>Date</type>
</CustomField>