unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <description>reason deal was closed</description>
    <label>Closed Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>