unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <description>amount partner pays SBL</description>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>