unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Credit_Sub_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Sub_Date__c</fullName>
    <description>date customer submitted credit application</description>
    <label>Credit Sub Date</label>
    <type>DateTime</type>
</CustomField>