unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Concurrent</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal Concurrent</fullName>
            </value>
            <value>
                <fullName>Initial Draw</fullName>
            </value>
            <value>
                <fullName>Subsequent Draw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>