unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>reason credit application was declined</description>
    <label>Decline Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>