unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Declined_Date__c</fullName>
    <description>date credit application was declined</description>
    <label>Declined Date</label>
    <type>DateTime</type>
</CustomField>