unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Displayed_Card_Order__c.field-meta.xml
<CustomField>
    <fullName>Displayed_Card_Order__c</fullName>
    <inlineHelpText>Order number the card was presented in the UI to the customer</inlineHelpText>
    <label>Displayed Card Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>