unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Docs_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_In_Date__c</fullName>
    <description>date customer returned signed contract</description>
    <label>Docs In Date</label>
    <type>DateTime</type>
</CustomField>