unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Docs_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Out_Date__c</fullName>
    <description>date contract was sent to customer</description>
    <label>Docs Out Date</label>
    <type>DateTime</type>
</CustomField>