unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Factor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Factor_Rate__c</fullName>
    <description>percentage cost of financing with the lender</description>
    <label>Factor Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>