unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date__c</fullName>
    <description>date credit application was funded</description>
    <label>Funded Date</label>
    <type>DateTime</type>
</CustomField>