unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Lender_Account__c.field-meta.xml
<CustomField>
    <fullName>Lender_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Matched_Lender_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>