unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Lender_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Lender_Deal_ID__c</fullName>
    <description>Partner’s unique identifier for the deal/application record (post-submission) in their system. Used by Data Engineering to update the correct matched lender record when daily/weekly file uploads are provided</description>
    <externalId>true</externalId>
    <label>Lender Deal ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>