unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Lender_Profile__c.field-meta.xml
<CustomField>
    <fullName>Lender_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender Profile</label>
    <referenceTo>Lender_Profile__c</referenceTo>
    <relationshipLabel>Matched Lender Opportunities</relationshipLabel>
    <relationshipName>Matched_Lender_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>