unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Lender_Profile_Code__c.field-meta.xml
<CustomField>
    <fullName>Lender_Profile_Code__c</fullName>
    <formula>Lender_Profile__r.Lender_Profile_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Profile Code</label>
    <type>Text</type>
</CustomField>