unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Lender_Status__c.field-meta.xml
<CustomField>
    <fullName>Lender_Status__c</fullName>
    <description>external partner's status of the lead or deal</description>
    <label>Lender Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>