unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Loan_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Months__c</fullName>
    <description>term of repayment in months</description>
    <label>Loan Term Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>