unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/LOC_Amount__c.field-meta.xml
<CustomField>
    <fullName>LOC_Amount__c</fullName>
    <description>line of credit amount taken by customer</description>
    <label>LOC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>