unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Matched_Lender__c.field-meta.xml
<CustomField>
    <fullName>Matched_Lender__c</fullName>
    <label>Matched Lender</label>
    <referenceTo>Matched_Lender__c</referenceTo>
    <relationshipLabel>Matched Lender Opportunities</relationshipLabel>
    <relationshipName>Matched_Lender_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>