unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Owner_FICO__c.field-meta.xml
<CustomField>
    <fullName>Owner_FICO__c</fullName>
    <description>business owner's fico score</description>
    <label>Owner FICO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>