unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>FRPSA</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>SBA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>