unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <inlineHelpText>Tracking field to capture where we would send the person if they were redirected to the Lender's website</inlineHelpText>
    <label>Redirect URL</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>