unpackaged/main/default/objects/Matched_Lender_Opportunity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Contains a combination of Sales and Underwriting picklist values. Meant to track the status of the customer after the matches are presented to them on the website</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>CTA Clicked</fullName>
            </value>
            <value>
                <fullName>Attempting Contact</fullName>
            </value>
            <value>
                <fullName>Working Contacted</fullName>
            </value>
            <value>
                <fullName>Working Application Out</fullName>
            </value>
            <value>
                <fullName>Closed Not Converted (dead)</fullName>
            </value>
            <value>
                <fullName>Closed Future Client</fullName>
            </value>
            <value>
                <fullName>Closed Converted (converted to Opp/Application In)</fullName>
            </value>
            <value>
                <fullName>Application Missing Info</fullName>
            </value>
            <value>
                <fullName>Application In</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Requesting Stips</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Selling Approval</fullName>
            </value>
            <value>
                <fullName>Offer Not Accepted (Customer)</fullName>
            </value>
            <value>
                <fullName>Contracts Out</fullName>
            </value>
            <value>
                <fullName>Contracts In</fullName>
            </value>
            <value>
                <fullName>Closed Lost (received an approval but did not fund)</fullName>
            </value>
            <value>
                <fullName>DOA</fullName>
            </value>
            <value>
                <fullName>Declined (never approved)</fullName>
            </value>
            <value>
                <fullName>Dead (DNC)</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Future Client (received an approval but did not fund)</fullName>
            </value>
            <value>
                <fullName>Funded (Closed Won)</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
                <isActive>false</isActive>
                <label>Error</label>
            </value>
            <value>
                <fullName>InvalidInput</fullName>
                <isActive>false</isActive>
                <label>InvalidInput</label>
            </value>
            <value>
                <fullName>Success</fullName>
                <isActive>false</isActive>
                <label>Success</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>